--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="../thloo.exe"
+export_path="../new/thloo.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -26,7 +26,7 @@ debug/export_console_wrapper=2
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
-shader_baker/enabled=false
+shader_baker/enabled=true
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
