--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,14 +3,18 @@
 name="touhou"
 platform="Windows Desktop"
 runnable=true
-advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="../new/thloo.exe"
+export_path="ex/thloo.exe"
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
@@ -20,10 +24,10 @@ script_export_mode=1
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release=""
+custom_template/debug="C:/Users/nep/Desktop/godot-4.6-rc1/bin/godot.windows.template_release.x86_64.mono.exe"
+custom_template/release="C:/Users/nep/Desktop/godot-4.6-rc1/bin/godot.windows.template_release.x86_64.mono.exe"
 debug/export_console_wrapper=2
-binary_format/embed_pck=true
+binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 shader_baker/enabled=true
@@ -78,7 +82,6 @@ texture_format/etc2=false
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=false
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -86,6 +89,11 @@ include_filter=""
 exclude_filter=""
 export_path=""
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
@@ -149,7 +157,6 @@ dotnet/embed_build_outputs=false
 name="Linux"
 platform="Linux"
 runnable=true
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -157,6 +164,11 @@ include_filter=""
 exclude_filter=""
 export_path=""
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
